@@ -2,6 +2,8 @@
     - Update our META.yml to version 1.2 of the spec.
     * Update the SEE ALSO to mention Module::Build, Module::Install,
       ExtUtils::ModuleMaker and Module::Starter.
+    - Fix ARCHITECTURE tag in PPD generation for 5.8 (patch taken from
+      ActiveState 819). [rt.cpan.org 20566]
 
 6.30_04  Mon Sep 11 16:14:06 EDT 2006
     - EXTRA_META has been undocumented as I don't like the way the
